Mostly fixed, still need to get it so that as it transitoins it jumps to cursors current possition
Also probably want to add an effect on top of the circle, i think maybe reducing boarder radius as it gets closer to a corner so it sorta pulls you in like a droplet (do some pythag theorum to find correct split).

--- a/style.css
+++ b/style.css
@@ -27,7 +27,23 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: border-radius 1s ease, transform 1s ease, border 0.5s ease,
+    width 0.5s ease, height 0.5s ease;
+  z-index: 15;
+}
+
+#cursorFollower {
+  position: absolute;
+  border: 2px solid #e2e4e9;
+  /* background-color: black; */
+  border-radius: 50vh 50vh 50vh 50vh;
+  width: 40vh;
+  height: 40vh;
+  align-items: center;
+  justify-content: center;
   transition: border-radius 1s ease, transform 1s ease, border 0.5s ease;
+  z-index: 15;
+  pointer-events: none;
 }
 
 #queueButton:hover {
